--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="app.js"></script>
+
     <title>
       Darnel Joseph
     </title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  
+
 
 
   <body>
